--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,20 @@
     <title>portfolio</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <script>
+      (function (l) {
+        if (l.search) {
+            var q = {};
+            l.search.slice(1).split('&').forEach(function (v) { // ?p=/fooの分解
+                var a = v.split('='); // 'p=/foo' となっているはずなので=で分割
+                q[a[0]] = a[1]; // {p: '/foo'} 形式に修正
+            });
+            if (q.p !== undefined) {
+                window.history.replaceState(null, null, l.pathname.slice(0, -1) + (q.p || ''));
+            }
+        }
+      }(window.location))
+    </script>
   </head>
   <body>
     <noscript>
